# amazon-review-scrapy

./: README.md  pyproject.toml  scrapy.cfg
amzreview/: items.py  middlewares.py  pipelines.py  settings.py
amzreview/spiders/: amz_review.py
