[project]
name = "amzreview"
version = "0.1.0"
description = ""
authors = [
    {name = "郑景瑶",email = "zhengjy@sz-bcs.com.cn"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "selenium (>=4.32.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
